Update hero imeages for fear of CC infringement

--- a/src/content/ideas/2022/planting-seeds/index.mdx
+++ b/src/content/ideas/2022/planting-seeds/index.mdx
@@ -13,8 +13,8 @@ hero:
 draft: false
 audience: 'All'
 image:
-  path: './garden.webp'
-  alt: Flowers Harmony by tubik.arts
+  path: './jungles-of-henri-rousseau.jpg'
+  alt: Jungle by Henri Rousseau
 ---
 
 ## Planting seeds
