--- a/src/content/ideas/2023/semantic-search/index.mdx
+++ b/src/content/ideas/2023/semantic-search/index.mdx
@@ -10,8 +10,8 @@ draft: false
 audience: 'All'
 media_subpath: "/ideas/semantic-search/"
 image:
-  path: "./the-ascendants-by-wangari-mathenge.webp"
-  alt: 'The Ascendants XI (Homage To Ecclesiastes 3:1-8), 2021 by Wangari Mathenge'
+  path: "./Monet_w1896.jpg"
+  alt: 'The Water-Lily Pond 1896 by Claude Monet'
 ---
 
 import { Image } from "astro:assets";
