--- a/src/content/ideas/2022/search-engine-fundamentals/index.mdx
+++ b/src/content/ideas/2022/search-engine-fundamentals/index.mdx
@@ -10,8 +10,8 @@ media_subpath: '/ideas/search-engine-fundamentals'
 draft: false
 audience: 'All'
 image:
-  path: "./low-cost-air-lines-jacek-yerka.jpg"
-  alt: Low cost air lines by Jacek Yerka
+  path: "./Monet_w1897.jpg"
+  alt: "The Water-Lily Pond 1897 by Claude Monet"
 ---
 
 import { Image } from "astro:assets";
